feat(identity): auth register
