# docs/swagger.json
@@ -140,19 +140,11 @@
             "type": "object",
             "required": [
                 "email",
-                "first_name",
-                "last_name",
                 "password",
                 "username"
             ],
             "properties": {
                 "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "last_name": {
                     "type": "string"
                 },
                 "password": {
